# mbdirector

./: .gitignore  MANIFEST.in  README.md  example.json  pyproject.toml  setup.py
mbdirector/: benchmark.py  main.py  runner.py  serve.py  target.py
mbdirector/schema/: mbdirector_schema.json
mbdirector/static/css/: style.css
mbdirector/templates/: base.html  index.html  run.html
